# rapid7-bulk-export-mcp

./: .dockerignore  .gitignore  .mcpbignore  AGENTS.md  Dockerfile  Makefile  README.md  SECURITY.md  cortex.yaml  docker-compose.yml  manifest.json  pyproject.toml  requirements.txt  run_server.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  docker-publish.yml  release.yml
.kiro/steering/: product.md  structure.md  tech.md
deploy/azure/: azd.yaml  main.bicep  main.parameters.json
docs/: copilot-studio-setup.md
power-rapid7-bulk-export/: POWER.md  mcp.json
power-rapid7-bulk-export/steering/: analysis-workflows.md
rapid7-bulk-export-skill/: README.md  SKILL.md
src/: __init__.py  config.py  db_utils.py  download.py  duckdb_loader.py  export_manager.py  export_tracker.py  graphql_client.py  mcp_server.py
tests/: __init__.py  test_config.py  test_download.py  test_duckdb_loader.py  test_export_integration.py  test_export_manager.py  test_export_tracker.py  test_graphql_client.py  test_setup.py
